추천 국가 조회 API 테스트 수정